--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gc-itac-ir",
+  "name": "globalcache-itac-ir",
   "version": "0.0.1",
   "description": "Module to control devices through a Global Cache iTac IP2IR infrared interface.",
   "main": "index.js",
